Remove unnecessary inheritance from util class. Add locator and method to page object. Change return type of clickBulkAnalysis. Comment tests as they are wip.